--- a/flask_app/templates/results.html
+++ b/flask_app/templates/results.html
@@ -15,7 +15,7 @@
         <h4 class="text-light ml-4"><span class="text-warning">Dojo Location: </span>{{ dojo.location }}</h4>
         <h4 class="text-light ml-4"><span class="text-warning">Favorite Language: </span>{{ dojo.language }}</h4>
         <h4 class="text-light ml-4"><span class="text-warning">Comments: </span>{{ dojo.comment }}</h4>
-        <a href="http://localhost:5000" class="btn btn-warning mt-4">Go Back</a>
+        <a href="/destroy" class="btn btn-warning mt-4">Go Back</a>
     </div>
 </body>
 </html>
